--- a/hammer/manual/assets/style.css
+++ b/hammer/manual/assets/style.css
@@ -1,4 +1,4 @@
-@import url(http://fonts.googleapis.com/css?family=Open+Sans);
+/* @import url(http://fonts.googleapis.com/css?family=Open+Sans); */
 
 *, *:after, *:before {
     box-sizing: border-box;
